--- a/FEWD1219/FEWD1219 Boilerplate/style.css
+++ b/FEWD1219/FEWD1219 Boilerplate/style.css
@@ -39,7 +39,7 @@ header p {
   margin-bottom: 10px;
 }
 
-/* Iteration 3: We want the color hashtags under the name (#developer, #learner) to be of color #969696 
+/* Iteration 3: We want the hashtags under the name (#developer, #learner) to be of color #969696 
 but they are of color #154b92, fix it */
 
 em {
@@ -70,6 +70,7 @@ em {
 }
 
 /* Iteration 4: The color of GitHub icon should be #005cd5 but it is seen black, why? */
+/* (Hint: The problem might not only be in the CSS file) */
 
 .github,
 .linkedin,
@@ -103,7 +104,7 @@ a {
   padding: 10px 10px 10px 5px;
 }
 
-.main-box a:hover {
+.main-box li:hover {
   background-color: rgba(207, 207, 207, 0.336);
 }
 
@@ -115,6 +116,7 @@ ul {
 li {
   margin: 10px;
   display: flex;
+  align-items: center;
   width: 100%;
 }
 
