--- a/FEWD1218/FEWD1218 Complete/style.css
+++ b/FEWD1218/FEWD1218 Complete/style.css
@@ -1,3 +1,4 @@
+/* Iteration 1: Import Montserrat font with weight of 200 and 400 from Google Fonts (https://fonts.google.com/) */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap");
 
 * {
@@ -65,9 +66,7 @@ body {
   align-items: center;
 }
 
-/** WRITE YOUR CODE BELOW **/
-
-/* Iteration 1: Add a padding of 20px to the caption and change its text to italic  */
+/* Iteration 2: Add a padding of 20px to the caption and change its text to italic  */
 caption {
   padding: 20px;
   font-style: italic;
@@ -78,7 +77,7 @@ caption {
 }
 
 .time-table {
-  /* Iteration 2: Set border-collapse property here */
+  /* Iteration 3: Remove borders from the table */
   border-collapse: collapse;
   margin: 25px 0;
   font-size: 0.9em;
@@ -89,7 +88,7 @@ caption {
 .time-table thead tr {
   background-color: #d63031;
   color: #ffffff;
-  /* Iteration 3: Align the text inside thead tag to left  */
+  /* Iteration 4: Align the text inside thead tag to left  */
   text-align: left;
   font-weight: 600;
 }
@@ -97,9 +96,10 @@ caption {
 .time-table th,
 .time-table td {
   padding: 12px 15px;
-  /* Iteration 4: Set the values of width to 100px */
+  text-align: center;
+  /* Iteration 5: Set the value of width to 100px */
   width: 100px;
-  height: 50px;
+  height: 40px;
 }
 
 .time-table tbody tr {
@@ -110,7 +110,7 @@ caption {
   background-color: #f3f3f3;
 }
 
-/* Iteration 5: Set the background color of all the odd rows to white */
+/* Iteration 6: Set the background color of all the odd rows to white */
 .time-table tbody tr:nth-of-type(odd) {
   background-color: white;
 }
@@ -119,7 +119,7 @@ caption {
   font-weight: 600;
 }
 
-/* Iteration 6: Add a solid border of 2px and #d63031 color at the bottom of the last row  */
+/* Iteration 7: Add a solid border of 2px and #d63031 color at the bottom of the last row  */
 .time-table tbody tr:last-of-type {
   border-bottom: 2px solid #d63031;
 }
