--- a/FEWD1115/FEWD1115 - Completed/style.css
+++ b/FEWD1115/FEWD1115 - Completed/style.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -18,9 +19,10 @@ body {
 }
 
 iframe {
-  width: 100vw;
-  height: 100vh;
+  width: 500%;
+  height: 500%;
   position: absolute;
+  opacity: 0.5;
   size-adjust: 0;
 }
 
