--- a/Codealong Projects/FE0012/style.css
+++ b/Codealong Projects/FE0012/style.css
@@ -17,7 +17,6 @@ body {
   width: 70%;
   color: black;
   font-size: 70px;
-  letter-spacing: 20px;
   margin: auto;
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -37,26 +36,22 @@ a {
   width: 390px;
   height: 220px;
   margin: 40px auto;
-  box-shadow: 2px 5px 15px 2px #0f0e0e94;
-  border-radius: 3px;
   background-color: black;
 }
 
 .info-grid {
-  width: 97%;
+  width: 100%;
   height: 95%;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.432);
-  border-radius: 3px;
   font-size: 11px;
 }
 
 .name {
-  width: 90%;
+  padding: 2px 0;
+  background-color: rgba(240, 248, 255, 0.362);
+  width: 97%;
   height: 60px;
-  padding-top: 10px;
   margin: auto;
   text-align: center;
-  letter-spacing: 0.1rem;
 }
 
 .addr,
@@ -86,18 +81,23 @@ em {
 }
 
 .name-tag {
-  align-self: center;
-  z-index: 2;
   width: 98%;
-  border-radius: 3px;
-  margin: auto;
+  margin: 15px auto;
   height: 40%;
-  background-color: rgba(255, 255, 255, 0.363);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.288);
-  font-size: 0.6rem; /*12px;*/
-  letter-spacing: 0.1rem;
+  font-size: 0.6rem;
   text-align: center;
   padding: 15px 0;
+  background-color: rgba(240, 248, 255, 0.362);
+}
+
+.profile-pic {
+  width: 70%;
+  margin: auto;
+  text-align: center;
+}
+
+img {
+  width: 60px;
 }
 
 .name-tag h1,
