--- a/Codealong Projects/FE0012/style.css
+++ b/Codealong Projects/FE0012/style.css
@@ -11,6 +11,7 @@
 body {
   height: 100vh;
   width: 100vw;
+  background-color: rgb(220, 220, 220);
 }
 
 .heading {
@@ -31,10 +32,9 @@ a {
   color: white;
 }
 
-.front-side,
-.back-side {
-  width: 390px;
-  height: 220px;
+.front-side {
+  width: 450px;
+  height: 280px;
   margin: 40px auto;
   background-color: black;
 }
@@ -45,11 +45,11 @@ a {
   font-size: 11px;
 }
 
-.name {
+.intro {
   padding: 2px 0;
   background-color: rgba(240, 248, 255, 0.362);
   width: 97%;
-  height: 60px;
+  height: 130px;
   margin: auto;
   text-align: center;
 }
@@ -67,27 +67,13 @@ em {
   font-size: 13px;
 }
 
-.name h2 {
+.intro h2 {
   margin-bottom: 6px;
   margin-top: 10px;
 }
 
-.name p {
+.intro p {
   color: rgb(179, 179, 179);
-}
-
-.back-side {
-  padding: 20px 0;
-}
-
-.name-tag {
-  width: 98%;
-  margin: 15px auto;
-  height: 40%;
-  font-size: 0.6rem;
-  text-align: center;
-  padding: 15px 0;
-  background-color: rgba(240, 248, 255, 0.362);
 }
 
 .profile-pic {
@@ -97,11 +83,6 @@ em {
 }
 
 img {
+  margin-top: 10px;
   width: 60px;
-}
-
-.name-tag h1,
-h3 {
-  margin: 2px;
-  font-weight: unset;
 }
